owl image dots simple class ekle

--- a/test/standart.html
+++ b/test/standart.html
@@ -22,7 +22,7 @@
       <div class="item"><img src="../assets/img/slider250x200.jpg"/></div>
       <div class="item"><img src="../assets/img/slider250x200.jpg"/></div>
     </div>
-    <div owl owl-settings='"loop":true,"margin":10,"nav":false,"items":1,"dots":true' owl-dots="image" owl-dotsStyle="box-shadow: 1px 1px 1px 2px #eee;">
+    <div owl owl-settings='"loop":true,"margin":10,"nav":false,"items":1,"dots":true' owl-dots="image" owl-dotsStyle="box-shadow: 1px 1px 1px 2px #eee;" owl-dotsClass="image-simple">
       <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
       <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
       <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
