slide dots eklendi

--- a/test/standart.html
+++ b/test/standart.html
@@ -8,7 +8,52 @@
     <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css">
   </head>
   <body>
-
+    <div owl owl-settings='"loop":false,"dotsData": false,"fluidSpeed": false,"dots": false,"margin":10,"nav":false,"items":1,"autoplayHoverPause": false' owl-dots="slide-number">
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+    </div>
+    <div owl owl-settings='"loop":false,"dotsData": false,"fluidSpeed": false,"dots": false,"margin":10,"nav":false,"items":1,"autoplayHoverPause": false' owl-dots="slide-image">
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+      <div class="item"><img src="../assets/img/slider1920x562.jpg"/></div>
+    </div>
     <div owl owl-settings='"loop":true,"margin":10,"nav":false,"responsive":{"0":{"items":1},"600":{"items":3},"1000":{"items":5}},"dots":true' owl-dots="number">
       <div class="item"><img src="../assets/img/slider250x200.jpg"/></div>
       <div class="item"><img src="../assets/img/slider250x200.jpg"/></div>
